@@ -1420,7 +1420,7 @@ BEGIN
     LTEXT           "New Selection Name:",-1,5,240,68,8
 END
 
-CHEATCONSOLE DIALOGEX 0, 0, 384, 178
+CHEATCONSOLE DIALOGEX 0, 0, 384, 186
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Cheat Search"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -1455,6 +1455,7 @@ BEGIN
     EDITTEXT        IDC_CHEAT_VAL_GT_BY,228,120,20,12,ES_UPPERCASE | ES_WANTRETURN
     EDITTEXT        IDC_CHEAT_VAL_LT_BY,228,147,20,12,ES_UPPERCASE | ES_WANTRETURN
     LTEXT           "(Hex)",IDC_STATIC,226,34,19,8
+    CONTROL         "Pause when active",IDC_CHEAT_PAUSEWHENACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,173,76,10
 END
 
 IDD_LUA DIALOGEX 0, 0, 270, 150
@@ -1800,7 +1801,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 377
         TOPMARGIN, 7
-        BOTTOMMARGIN, 171
+        BOTTOMMARGIN, 183
     END
 
     "VIDEOCONFIG", DIALOG
